feat(settings): add data erase

--- a/app/src/main/res/values-ka-rGE/strings.xml
+++ b/app/src/main/res/values-ka-rGE/strings.xml
@@ -39,7 +39,6 @@
     <string name="pref_language">ენა</string>
     <string name="pref_currency">ვალუტა</string>
     <string name="settings_storage">მონაცემები</string>
-    <string name="storage_clear">მონაცემების წაშლა</string>
     <string name="storage_clear_bookmarks">შენახულების წაშლა</string>
     <string name="storage_clear_history">ძებნის ისტორიის წაშლა</string>
     <string name="settings_info">ინფორმაცია</string>
@@ -47,6 +46,7 @@
     <string name="info_contact">კონტაქტი</string>
     <string name="info_os">ოფენ-სორსი</string>
     <string name="info_version">აპლიკაციის ვერსია</string>
+    <string name="clear_bookmarks_success">შენახულები წაშლილია</string>
     <string name="none">არცერთი</string>
     <string name="cd_img_walk_through">გზამკლევის სურათი</string>
 
@@ -86,5 +86,17 @@
     <string name="profit_n_loss">მოგება/წაგება</string>
     <string name="profit_investment_total">ჯამური ინვესტიცია</string>
     <string name="profit_exit_total">ჯამური გამოსვლა</string>
+    <string name="theme_dark">მუქი</string>
+    <string name="theme_light">ღია</string>
+    <string name="theme_system">სისტემის</string>
+    <string name="storage_clear_cache">ქეშის წაშლა</string>
+    <string name="storage_clear_storage">მონაცემების წაშლა</string>
+    <string name="clear_history_success">ძებნის ისტორია წაშლილია</string>
+    <string name="clear_cache_success">აპლიკაციის ქეში წაშლილია</string>
+    <string name="clear_storage_success">აპლიკაციის მონაცემები წაშლილია</string>
+    <string name="clear_bookmarks_fail">შენახულები წაშლა ვერ მოხერხდა</string>
+    <string name="clear_history_fail">ძებნის ისტორიის წაშლა ვერ მოხერხდა</string>
+    <string name="clear_cache_fail">აპლიკაციის ქეშის წაშლა ვერ მოხერხდა</string>
+    <string name="clear_storage_fail">აპლიკაციის მონაცემების წაშლა ვერ მოხერხდა</string>
 
 </resources>
