--- a/app/src/main/res/values-ka-rGE/strings.xml
+++ b/app/src/main/res/values-ka-rGE/strings.xml
@@ -113,4 +113,16 @@
         <item>ქართული</item>
     </string-array>
 
+    <!-- About usd -->
+    <string name="paragraph_project">პროექტის შესახებ</string>
+    <string name="info_project">
+        მოგესალმებით %s-ში, კრიპტოვალუტების ბაზარის კაპიტალიზაციის მონიტორინგის პროგრამაში.
+        ჩვენ გთავაზობთ მონაცემებს რეალურ დროში და მათი დეტალური სტატისტიკა და განხილვა.
+        \n\n%s-ში ჩვენ კარგად გვესმის კრიპტო ბაზრის განვითარებადი ბუნება.
+        ჩვენი აპლიკაცია მიზნად ისახავს კრიპტოვალუტების რთული სამყაროს გამარტივებას.
+    </string>
+    <string name="visit_github_page">Open Source და ხელმისაწვდომია  GitHub-ზე</string>
+    <string name="contact_developer">დაუკავშირდით დეველოპერს</string>
+
+
 </resources>
