feat(support): add contact page

--- a/app/src/main/res/values-ka-rGE/strings.xml
+++ b/app/src/main/res/values-ka-rGE/strings.xml
@@ -124,5 +124,14 @@
     <string name="visit_github_page">Open Source და ხელმისაწვდომია  GitHub-ზე</string>
     <string name="contact_developer">დაუკავშირდით დეველოპერს</string>
 
+    <!-- Contact -->
+    <string name="contact_content">
+        ჩვენ ვაფასებთ თქვენს გამოხმაურებას და ვცდილობთ მუდმივად გავაუმჯობესოთ ჩვენი აპლიკაცია.
+        თუ თქვენ გაქვთ რაიმე შეკითხვები, შემოთავაზებები, ან შეგექმნათ რაიმე პრობლემა %s-ის გამოყენებისას,
+        გთხოვთ, ნუ მოგერიდებათ დაგვიკავშირდით ქვემოთ მოცემულ ელფოსტაზე ან github issue-ში.
+        ჩვენ აქ ვართ დაგეხმაროთ და მოგაწოდოთ მომხმარებლის საუკეთესო შესაძლო გამოცდილება.
+        \n\nგმადლობთ, რომ აირჩიეთ %s.
+    </string>
+
 
 </resources>
