--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,6 +174,16 @@
     <string name="github_repo" translatable="false">github.com/hexley21/CoinFuse</string>
     <string name="developer" translatable="false">a.kupreishvili.21@gmail.com</string>
 
+    <!-- Contact -->
+    <string name="contact_content">
+        We value your feedback and strive to continuously improve our app. If you have any questions,
+        suggestions, or encounter any issues while using %s, please don\'t hesitate to reach out to
+        our us at email below or in github issues. We are here to assist you and provide
+        the best possible user experience.
+        \n\nThank you for choosing %s. We hope you enjoy your journey into the fascinating world of
+        cryptocurrencies!
+    </string>
+
     <!-- Errors -->
     <string name="error_no_internet">No internet connection</string>
     <string name="error_no_data">No data available</string>
