feat(support): add app rate

--- a/app/src/main/res/values-ka-rGE/strings.xml
+++ b/app/src/main/res/values-ka-rGE/strings.xml
@@ -46,6 +46,7 @@
     <string name="info_os">ოფენ-სორსი</string>
     <string name="info_version">აპლიკაციის ვერსია</string>
     <string name="clear_bookmarks_success">შენახულები წაშლილია</string>
+    <string name="rate_app">აპლიკაციის შეფასება</string>
     <string name="none">არცერთი</string>
     <string name="cd_img_walk_through">გზამკლევის სურათი</string>
 
